@@ -17,7 +17,7 @@ $_MODULE['<{packetery}prestashop>packetery_92d4773a9f32fc3333cb8238471cf763'] = 
 $_MODULE['<{packetery}prestashop>packetery_c721b4e2739ac6e4dd5b507696c0a24d'] = 'Aby výběr výdejního místa správně fungoval, musí být složka modulu Packeta zapisovatelná.';
 $_MODULE['<{packetery}prestashop>packetery_b1d2b2b5b4d88a9fdc0619ab919713c9'] = 'Na webovém serveru není k dispozici žádný způsob přístupu k Packeta API: povolte prosím modul CURL nebo nastavení allow_url_fopen.';
 $_MODULE['<{packetery}prestashop>packetery_35c4f71040b3390abc9a98803735e993'] = 'API heslo Zásilkovny není nastaveno.';
-$_MODULE['<{packetery}prestashop>packetery_26ff7eaab2ad87962dbd3d7d6dbaf020'] = 'Propojení s API Zásilkovny se nezdařilo, pravděpodobně používáte chybné API heslo.';
+$_MODULE['<{packetery}prestashop>packetery_a8aadecdc79bcce492c6b27b78077b02'] = 'Nesprávné API heslo.';
 $_MODULE['<{packetery}prestashop>packetery_0b647f6df914903b01f2659f54d90474'] = 'Číslo objednávky';
 $_MODULE['<{packetery}prestashop>packetery_ce26601dac0dea138b7295f02b7620a7'] = 'Zákazník';
 $_MODULE['<{packetery}prestashop>packetery_f3547ae5e06426d87312eff7dda775aa'] = 'Celková cena';
